public/css/style.css
body, html {
  margin: 0;
  height: 100%;
  overflow:hidden;
  font-family: Arial, Helvetica, sans-serif;
}

main {
  display: flex;
  box-sizing: border-box;
  width: 100%;
  justify-content: space-between;
  /* border:1px solid #333; */
}

#online {
  width:200px;
  height: 100vh; /*promenio sam ovo da bi imao scroll ako ima previse*/
  position: fixed;
  right: 0;
  top:0;
  overflow-y: scroll;
  overflow-x: hidden;
}

#online h4 {
  text-align: center;
}

#online .user {
  display:flex;
  align-items: flex-start;
  margin-bottom: 5px;
  border-bottom: 1px solid rgb(212, 202, 202);
  padding:0 0 5px 0;
  /* border:1px solid red; */
  position: relative;
}

#online .user:last-child {
  border-bottom: none;
}

#online img {
  height:50px;
  width:50px;
  margin-right: 3px;
  border-radius: 50%;
  margin-left:5px;
  border:2px solid green;
  box-shadow: 0 0 2px rgb(83, 78, 78);

}

#online img:hover {
  cursor: pointer;
  transform: scale(1.1);
}

#online img:active {
  transform: scale(0.99);
}

#online h5 {
  margin:10px 0 0 5px;
  display: inline;
  font-size: 14px;
  color:rgb(119, 116, 116);
}

#online p {
  margin: 0 20px 10px 7px;
  font-size: 13px;
  font-style: italic;
}

#chat {
  width:100%;
  height:100vh;
  height:calc(100vh - 36px);
  overflow-y: scroll;
  margin-right: 200px;
  padding-bottom: 30px;
  box-sizing: border-box;
}

.bubble {
  margin: 0 0 10px 10px;
  max-width: 80%;
  /* display: flex; */
}

.bubble div {
  display: flex;
  flex-direction: row;
  padding-left:4px;
}

.bubble img {
  height:30px;
  width:30px;
  margin-right: 3px;
  border-radius: 50%;
  margin-left:5px;
  margin: 0 3px 0 5px;
  border:2px solid green;
  box-shadow: 0 0 2px rgb(83, 78, 78);
}

.bubble:last-child {
  margin-bottom: 10px;
}

.bubble div p {
  margin:0;
  background-color: #00843D;
  color:#fff;
  border-radius: 15px;
  display: inline-block;
  padding:10px 20px;
  word-break: break-all; /* ----------------- problematic on mobile phones -------*/
}

.bubble h4 {
  margin:0;
  padding:5px 0 4px 10px;
  color:rgb(119, 116, 116);
}

.bubble h5 {
  margin:0;
  padding:2px 0 4px 10px;
  color: rgb(88, 125, 219);;
}

.bubble h5:hover {
  color:rgb(39, 87, 207);
  cursor: pointer;
}

#type-area {
  position: fixed;
  bottom: 0;
  left:0;
  width: 100%;
}

#type-area p {
  margin:5px;
  padding:0;
}

#type-area div {
  display: flex;
  /* border:1px solid #333; */
  width: calc(100% - 220px);
  justify-content: space-around;
}

#type-area input {
  height:30px;
  width: 100%;
  border:1px solid #333;
}

#type-area button {
  width:10%;
  min-width: 70px;
}

@media (max-width:580px){
  #type-area div {
    width:100%
  }

  #online {
    height: calc(100vh - 36px);
  }
}

/* Keyframe and animation */
.nudge {
  animation: nudged 0.5s forwards;
}

@keyframes nudged {
  0% {transform: rotate(0deg);}
  14%{transform: rotate(-20deg);}
  28%{transform: rotate(20deg)}
  42%{transform: rotate(-20deg)}
  56%{transform: rotate(20deg)}
  70%{transform: rotate(-20deg)}
  84%{transform: rotate(20deg)}
  100%{transform: rotate(0deg)}
}

/* ---- extra class ----- */
.bubble.myMessage {
  margin: 10px 0 10px auto;
  max-width: 80%;
  text-align: right;
}

.bubble.myMessage h4 {
  padding:5px 10px 4px 0;
}

.bubble.myMessage div {
  display: flex;
  flex-direction: row-reverse;
  padding-right:4px;

}

.bubble.myMessage  div p {
  background-color:orange;
}

.bubble.myMessage img {
  border-radius: 50%;
  margin-left:5px;
  margin: 0 5px 0 3px;
  border:2px solid orange;
  box-shadow: 0 0 2px rgb(83, 78, 78);
}

/*private class - private messsage socket sent to others */
.bubble.myMessage.private div p {
  background-color: red;
}

.bubble.myMessage.private img {
  border:2px solid red;
}


/*private message to me from one user*/
.bubble.privateMsg div p {
  background-color:red;
}

.bubble.myMessage.privateMsg img {
  border:2px solid red;
}

#Capa_1 {
  height:20px;
  width: auto;
  padding-right: 5px;
  position: absolute;
  right:10px;
  top:0px;
}

#Capa_1:hover {
  cursor: pointer;
  transform: scale(1.1);
}

#Capa_1:active {
  transform: scale(0.96);
}

